--- a/auto/install
+++ b/auto/install
@@ -106,8 +106,27 @@ $NGX_OBJS/nginx.8:	$NGX_MAN $NGX_AUTO_CONFIG_H
 		-e "s|%%ERROR_LOG_PATH%%|${NGX_ERROR_LOG_PATH:-stderr}|" \\
 		< $NGX_MAN > \$@
 
+END
+
+if test -n "$NGX_SHARED_MODULES"; then
+
+cat << END                                                    >> $NGX_MAKEFILE
+
+install:	all \
+		$NGX_INSTALL_PERL_MODULES
+END
+
+else
+cat << END                                                    >> $NGX_MAKEFILE
+
 install:	$NGX_OBJS${ngx_dirsep}nginx${ngx_binext} \
 		$NGX_INSTALL_PERL_MODULES
+END
+
+fi
+
+cat << END                                                    >> $NGX_MAKEFILE
+
 	test -d '\$(DESTDIR)$NGX_PREFIX' || mkdir -p '\$(DESTDIR)$NGX_PREFIX'
 
 	test -d '\$(DESTDIR)`dirname "$NGX_SBIN_PATH"`' \
@@ -151,9 +170,6 @@ install:	$NGX_OBJS${ngx_dirsep}nginx${ngx_binext} \
 		|| cp conf/nginx.conf '\$(DESTDIR)$NGX_CONF_PATH'
 	cp conf/nginx.conf '\$(DESTDIR)$NGX_CONF_PREFIX/nginx.conf.default'
 
-	test -d '\$(DESTDIR)$NGX_DSO_PATH' \
-		|| mkdir -p '\$(DESTDIR)$NGX_DSO_PATH'
-
 	test -d '\$(DESTDIR)`dirname "$NGX_PID_PATH"`' \
 		|| mkdir -p '\$(DESTDIR)`dirname "$NGX_PID_PATH"`'
 
@@ -188,9 +204,19 @@ fi
 
 if [ $NGX_DSO = YES ] ; then
 
-    if [[ "$NGX_DSO_PATH" != "^/*" ]] ; then
-        NGX_DSO_PATH=$NGX_PREFIX/$NGX_DSO_PATH
-    fi
+    cat << END                                                >> $NGX_MAKEFILE
+	test -d '\$(DESTDIR)$NGX_DSO_PATH' \
+		|| mkdir -p '\$(DESTDIR)$NGX_DSO_PATH'
+END
+
+    for ngx_dso_module in $NGX_DSO_ALL_TARGETS
+    do
+        cat << END                                                >> $NGX_MAKEFILE
+
+	cp $ngx_dso_module \$(DESTDIR)$NGX_DSO_PATH
+
+END
+    done
 
     cat << END                                                >> $NGX_MAKEFILE
 
